[package]
name = "casino"
version = "0.1.0"
authors = ["InkDevHub"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

dia-oracle-randomness-getter = { path = "oracle-randomness-getter", default-features = false }
dia-oracle-randomness-type = { path = "oracle-randomness-type", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "dia-oracle-randomness-getter/std",
    "dia-oracle-randomness-type/std",
]
ink-as-dependency = []
e2e-tests = []
